tests/ui/traits/issue-79458.stderr
error[E0277]: the trait bound `&mut T: Clone` is not satisfied
  --> $DIR/issue-79458.rs:6:5
   |
LL | #[derive(Clone)]
   |          ----- in this derive macro expansion
LL | struct Foo<'a, T> {
LL |     bar: &'a mut T
   |     ^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `&mut T`
  --> $SRC_DIR/core/src/clone.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Clone)]`
   |
   = help: the trait `Clone` is implemented for `&T`
   = note: `Clone` is implemented for `&T`, but not for `&mut T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
